Phase 1B: Run full GPT5judged re-judging (copilot semantic) and update docs
- Executed step7_rejudge_gpt5.py with --mode copilot across all 200 batches
- Added Completed Re-run section to PHASE_1B_OFFICIAL_ASSESSMENT.md with summary and per-category stats
- Updated IMPLEMENTATION_CHECKLIST.md to mark re-judging step complete and note summary location
- Fixed CopilotJudge type issues and deprecated device attribute usage; ensured numpy conversion and stable logging
- Outputs at Phase 1B_2_0/data/GPT5judged/{batch_XXX.jsonl,GPT5judged_all.jsonl,summary.json}

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,9 @@ archive_old_src/
 *.jsonl
 Phase0/data/*.jsonl
 Phase1A_2_0/data/*.jsonl
+Phase 1B_2_0/data/*.jsonl
+
+# Phase 1A/1B model files and checkpoints (too large)
+Phase1A_2_0/models/
+Phase1A_2_0/data/checkpoints/
+Phase 1B_2_0/data/
