Phase 1C: Self-critique pipeline improvements and uplift measurement
- Add step11_rejudge_uplift_sample.py (Haiku replay uplift for baseline vs improved)
- Add step12_semantic_uplift.py (local semantic uplift proxy)
- Enhance step9_self_critique_rewrite.py with 4-bit quantization (--load_in_4bit) and --resume support; flush per-record
- Update configs/distillation_training.yaml to include improved_forward/reverse with small weights
- Add scripts/run_self_critique_on_vast.sh to run step9 on Vast.ai (CUDA, 4-bit, resume) and evaluate

Notes:
- Replay uplift for improved items is not applicable (deterministic mapping to original IDs); use semantic uplift for new outputs
- Step10 evaluation remains fast and provides training-ready datasets

--- a/configs/distillation_training.yaml
+++ b/configs/distillation_training.yaml
@@ -27,12 +27,24 @@ sample_packing: true
 
 # Dataset Configuration - Mixed Training
 datasets:
-  # 90% GPT-5 targeted data (40K examples)
-  - path: data/phase1c/gpt5_filtered_40k.jsonl
+  # 90% targeted data (TEMP: using reference-based bootstrap + improved datasets for smoke tests)
+  # Original planned path:
+  # - path: data/phase1c/gpt5_filtered_40k.jsonl
+  - path: data/phase1c/targeted_failures_from_refs.jsonl
     type: completion
-    weight: 0.9
-  
-  # 10% original data to prevent catastrophic forgetting (60K examples)
+    weight: 0.8
+
+  # New: Improved forward dataset from self-critique (pass=True only)
+  - path: Phase 1B_2_0/data/self_critique/eval/improved_forward.jsonl
+    type: completion
+    weight: 0.08
+
+  # New: Reverse dataset from self-critique (helps instruction generation)
+  - path: Phase 1B_2_0/data/self_critique/eval/improved_reverse.jsonl
+    type: completion
+    weight: 0.02
+
+  # 10% original data to prevent catastrophic forgetting (keep as-is)
   - path: data/phase1/public_500k_filtered.jsonl
     type: completion
     weight: 0.1
